<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/fragment_notification_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/fragment_notification_tool_bar"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp"
            android:gravity="center"
            />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/fragment_notification_ll_empty_notifications"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/fragment_notification_toolbar"
        android:gravity="center_horizontal"
        android:visibility="gone"
        >

        <ImageView
            android:id="@+id/fragment_notification_img_v_empty_notifications"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:src="@drawable/notification_empty"
            android:layout_marginEnd="@dimen/_23sdp"
            android:layout_marginTop="@dimen/_20sdp"
            />

        <TextView
            android:id="@+id/fragment_notification_tv_empty_notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/fragment_notification_tv_empty_notifications"
            android:gravity="center"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            android:textColor="@color/notification_alert_color"
            />

        <Button
            android:id="@+id/fragment_notification_btn_empty_notifications"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/fragment_notification_btn_donation"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@drawable/round_orange_btn"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_notification_rv_notifications"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/fragment_notification_toolbar"
        />

</RelativeLayout>